tests/negative/symbols/use_undef5.orng
// use_undef5.orng:12:8: error: the type `Int` does not implement the method `add`
//     y.>add(x)
//       ^
// 
impl for Int {
    fn add(self, other: Int) -> Int { self + other }
}

fn main() -> Int {
    let x: Int = undefined
    let y: Int = 44
    y.>add(x)
}